--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<!--          Our services          -->	
 		<div class="our-service" id="services">
 				<div class="content">
-					<div class="title"><span>Мои услуги</span>
+					<div class="title"><span>Мои услуги к тебе </span>
 						<div class="subtitle"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, fuga.</p></div>
 					</div>
 					<div class="services">
